# mvf-hack-2025

./: .gitignore  crawl.py  ferrari_f40_review.md  ferrari_f40_summary.md  justfile  main.py  pyproject.toml  run_api.py
api/: api.py
forum-scraping/: .env  analyze_data.py  ferrarichat_scraper.py  package-lock.json  process_data.py  reddit_scraper.py  requirements.txt  scrape.py  scrape_reddit.py  sentiment_analysis.py  standardize_dates.py
forum-scraping/v1/: ferrarichat_data.json
forum-scraping/v2/: unified_comments.json
forum_scraping/: cookies.json  ferrarichat_scraper.py  json_to_excel.py  reddit_scraper.py  requirements.txt  scrape.py  scrape_reddit.py  sentiment-analysis.ipynb  sentiment_analysis.py  setup_venv.sh  standardize_dates.py
forum_scraping/samples/: comments_with_sentiment.xlsx
frontend_design/: .gitignore  package.json  pnpm-lock.yaml
frontend_design/.next/: app-build-manifest.json  trace
frontend_design/.next/cache/: .rscinfo
frontend_design/.next/server/: app-paths-manifest.json  server-reference-manifest.json  webpack-runtime.js
frontend_design/app/: page.tsx
frontend_design/app/comparison/: page.tsx
frontend_design/components/: drag-drop-interface.tsx  sentiment-trend-cards.tsx
frontend_design/lib/: api.ts  export-utils.ts
key_themes/: scraping.py  web_search.py
key_themes/prompts/: scraping.md  summarization.md  web_search.md
scraping/: asp.py
scraping/samples/: dataset_tiktok_scraped.json
social-scraping/: asp.py
social_scraping/: asp.py
social_scraping/prompts/: asp_translation.md
(+123 files in other folders)
